Minor styling bug squashes to NYC page

--- a/themes/unya/sass/_footer.scss
+++ b/themes/unya/sass/_footer.scss
@@ -33,7 +33,7 @@
 }
 
 section.pre-footer{
-  height:175px;
+  height:auto;
   width:100%;
   display:flex;
   justify-content:center;
@@ -54,8 +54,8 @@ section.pre-footer{
    padding: 0 25px;
    line-height:24px;
    @include desktop{
-    font-size:2.57142857142rem;
-    font-weight:bold;
+    font-size:2.25rem;
+    font-weight:500;
     text-transform:uppercase;
     font-family:$font__heading;
     text-align:left;
@@ -428,3 +428,9 @@ section.opportunities-pre-footer{
     } // closing contact us
 }//closing footer
 
+.prefooter-donation-button {
+  min-width: auto;
+  @include tablet {
+    min-width: 18rem;
+  }
+}
