--- a/themes/unya/sass/_page-get-involved.scss
+++ b/themes/unya/sass/_page-get-involved.scss
@@ -296,3 +296,7 @@ section.donation{
     border-bottom: 2px solid $color__blue-dark;
   }
 }
+
+.planning {
+  margin-top: 2rem !important;
+}
